k8s/server/base/django/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
  name: server
spec:
  selector:
    matchLabels:
      app: server
  strategy: {}
  template:
    metadata:
      labels:
        app: server
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "false"
    spec:
      containers:
      - name: istio-proxy
        image: auto
        # istio-proxies are injected by anthos, see `istio.io/rev: asm-managed` in ../namespace.yaml
        # these are overrides for the default configuration of those injected proxy sidecars
        resources:
          requests:
            # Experiment: using the minimum pod resources https://cloud.google.com/kubernetes-engine/docs/concepts/autopilot-resource-requests#compute-class-min-max
            cpu: 50m # + `server` container = 250m
            memory: 112Mi # + `server` container = 512MiB
      - name: server
        securityContext:
          runAsUser: 5678
        image: northamerica-northeast1-docker.pkg.dev/phx-01h4rr1468rj3v5k60b1vserd3/cpho-phase2-artifact-registry-for-cloud-run/cpho-phase2:a11y-testing-b627c606-1702064694 # {"$imagepolicy": "flux-system:server"}
        resources:
          # Autopilot only considers requests (see https://cloud.google.com/kubernetes-engine/docs/concepts/autopilot-resource-requests#resource-limits)
          requests:
            # Experiment: using the minimum pod resources https://cloud.google.com/kubernetes-engine/docs/concepts/autopilot-resource-requests#compute-class-min-max
            cpu: 200m # + `isito-proxy` container = 250m
            memory: 400Mi # + `isito-proxy` container = 512MiB
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
            httpHeaders:
            - name: Host
              value: hopic-sdpac.phac-aspc.alpha.canada.ca
          initialDelaySeconds: 35
          periodSeconds: 10
          timeoutSeconds: 3
status: {}
