k8s/server/base/django/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
  - name: http-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
status:
  loadBalancer: {}
